[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stsckm"
version = "1.0.1"
description = "Spatially constrained spatio-temporal K-means clustering"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Muh Akbar Idris", email = "muhakbaridris@apps.ipb.ac.id" },
]
keywords = [
  "clustering",
  "spatial statistics",
  "spatio-temporal",
  "geospatial",
  "machine learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
test = [
  "pytest>=8",
  "pytest-cov>=5",
]
docs = [
  "sphinx>=7",
  "furo>=2024.1.29",
]
dev = [
  "build>=1.2",
  "matplotlib>=3.7",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "sphinx>=7",
  "furo>=2024.1.29",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/muhakbaridris/ST-SCKM"
Documentation = "https://github.com/muhakbaridris/ST-SCKM/tree/main/docs"
Repository = "https://github.com/muhakbaridris/ST-SCKM"
Issues = "https://github.com/muhakbaridris/ST-SCKM/issues"
Publication = "https://doi.org/10.1016/j.jnlssr.2026.100357"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stsckm = ["data/*.csv"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["stsckm"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
